# todo-app

./: Cargo.toml  README.md
client/: scripts.js  styles.css
migrations/: 20240305213618_todo.sql  20240308184635_todo.sql  20240308202002_todo.sql  20240313164343_progess.sql  20240313175824_correction.sql  20240313233312_adjusted.sql  20240313233756_new_adjustment.sql  20240313234502_revision.sql  20240313235205_revision2.sql  20240314214024_revision3.sql
src/: handlers.rs  lib.rs  main.rs  templates.rs
templates/: active.html  completed.html  deactivatetodo.html  deleteprogress.html  editform.html  hideprogress.html  index.html  login.html  pending.html  progress.html  progressnote.html  revert.html
