[package]
name = "todo-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
askama = "0.12.1"
askama_axum = "0.4.0"
axum = { version = "0.7.4", features = ["ws", "macros"] }
chrono = "0.4.34"
dotenv = "0.15.0"
serde = { version = "1.0.196", features = ["derive"] }
sqlx = { version = "0.7.3", features = ["runtime-tokio", "postgres", "chrono"] }
tokio = { version = "1.36.0", features = ["full"] }
tower-http = { version = "0.5.1", features = ["fs"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
